--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@udia/common",
-  "version": "1.0.1",
-  "description": "",
+  "version": "1.0.2",
+  "description": "Zero dependency, strongly typed helper library for cryptography, base64 utilities, nested proxy, and invariant.",
+  "repository": "https://git.sr.ht/~udia/common",
   "main": "dist/index.js",
   "scripts": {
     "build": "rm -rf dist && tsc",
