--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
   ],
   "compilerOptions": {
     "target": "es2015",
-    "module": "es2015",
+    "module": "commonjs",
     "declaration": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
